@@ -121,22 +121,22 @@ $(builddir)/share/lilypond/$(TOPLEVEL_VERSION)-force:
 	@cd $(builddir) && mkdir -p share/lilypond
 	@cd $(builddir)/share/lilypond && mkdir -p $(TOPLEVEL_VERSION)
 	@cd $(builddir)/share/lilypond/$(TOPLEVEL_VERSION) && \
-		ln -s ../../../$(srcdir)/ly ly && \
+		ln -s $(abs-srcdir)/ly ly && \
 		ln -s ../../../mf/$(outconfbase) dvips && \
 		ln -s ../../../mf/$(outconfbase) afm && \
 		ln -s ../../../mf/$(outconfbase) tfm && \
-		ln -s ../../../$(srcdir)/mf && \
-		ln -s ../../../$(srcdir)/ps && \
-		ln -s ../../../$(srcdir)/scm
+		ln -s $(abs-srcdir)/mf && \
+		ln -s $(abs-srcdir)/ps && \
+		ln -s $(abs-srcdir)/scm
 	@cd $(builddir)/share/lilypond/$(TOPLEVEL_VERSION) && \
 		mkdir tex
 	@cd $(builddir)/share/lilypond/$(TOPLEVEL_VERSION)/tex && \
-		ln -s ../../../../$(srcdir)/tex source && \
+		ln -s $(abs-srcdir)/tex source && \
 		ln -s ../../../../mf/$(outconfbase) generate
 	@cd $(builddir)/share/lilypond/$(TOPLEVEL_VERSION) && \
 		mkdir fonts
 	@cd $(builddir)/share/lilypond/$(TOPLEVEL_VERSION)/fonts && \
-		ln -s ../../../../$(srcdir)/mf source && \
+		ln -s $(abs-srcdir)/mf source && \
 		ln -s ../../../../mf/$(outconfbase) afm && \
 		ln -s ../../../../mf/$(outconfbase) tfm && \
 		ln -s ../../../../mf/$(outconfbase) type1
